# toml-configer

./: pyproject.toml
src/toml_configer/: config.toml  configer.py  main.py  permissions.per
