[tool.poetry]
name = "toml-configer"
version = "0.1.0"
description = ""
authors = ["76img <76img>"]
packages = [
    { include = "toml-configer", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
rtoml = "^0.8.0"
black = "^22.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
